SICXEANALIZADOR/SICXEANALIZADOR/obj/Debug/SICXEParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.6
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\emman\OneDrive\Documentos\Semestre 8\LABFWS\SICXEFWS\SICXEANALIZADOR\SICXEANALIZADOR\SICXE.g4 by ANTLR 4.6.6

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace SICXEANALIZADOR {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.6")]
[System.CLSCompliant(false)]
public partial class SICXEParser : Parser {
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, CONSTCAD_TEXT=19, CONSTCAD_HEX=20, CODOPF1=21, INSTRN=22, INSTRUNIC=23, 
		CODOPF2=24, CODOPF34=25, END=26, ID=27, NUM=28, CONSTHEX=29, CONSTCAD=30, 
		FINL=31, WS=32, INVALID=33, REG=34;
	public const int
		RULE_compileUnit = 0, RULE_programa = 1, RULE_inicio = 2, RULE_fin2 = 3, 
		RULE_entrada = 4, RULE_proposiciones = 5, RULE_proposicion = 6, RULE_instruccion = 7, 
		RULE_formato1 = 8, RULE_formato2 = 9, RULE_formato3 = 10, RULE_directiva = 11, 
		RULE_direc = 12, RULE_opdirectiva_byte = 13, RULE_tipodirectiva = 14, 
		RULE_etiqueta = 15, RULE_etiqueta_con_espacios = 16, RULE_opdirectiva = 17, 
		RULE_registro = 18, RULE_e = 19;
	public static readonly string[] ruleNames = {
		"compileUnit", "programa", "inicio", "fin2", "entrada", "proposiciones", 
		"proposicion", "instruccion", "formato1", "formato2", "formato3", "directiva", 
		"direc", "opdirectiva_byte", "tipodirectiva", "etiqueta", "etiqueta_con_espacios", 
		"opdirectiva", "registro", "e"
	};

	private static readonly string[] _LiteralNames = {
		null, "'START'", "','", "'+'", "'#'", "'@'", "'X'", "'RSUB'", "'BYTE'", 
		"'WORD'", "'RESB'", "'RESW'", "'BASE'", "'A'", "'L'", "'B'", "'S'", "'T'", 
		"'F'", null, null, null, null, "'SVC'", null, null, "'END'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, "CONSTCAD_TEXT", "CONSTCAD_HEX", 
		"CODOPF1", "INSTRN", "INSTRUNIC", "CODOPF2", "CODOPF34", "END", "ID", 
		"NUM", "CONSTHEX", "CONSTCAD", "FINL", "WS", "INVALID", "REG"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "SICXE.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public SICXEParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class CompileUnitContext : ParserRuleContext {
		public ProgramaContext programa() {
			return GetRuleContext<ProgramaContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(SICXEParser.Eof, 0); }
		public CompileUnitContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_compileUnit; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISICXEListener typedListener = listener as ISICXEListener;
			if (typedListener != null) typedListener.EnterCompileUnit(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISICXEListener typedListener = listener as ISICXEListener;
			if (typedListener != null) typedListener.ExitCompileUnit(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISICXEVisitor<TResult> typedVisitor = visitor as ISICXEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCompileUnit(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CompileUnitContext compileUnit() {
		CompileUnitContext _localctx = new CompileUnitContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_compileUnit);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 40; programa();
			State = 41; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ProgramaContext : ParserRuleContext {
		public Fin2Context fin2() {
			return GetRuleContext<Fin2Context>(0);
		}
		public ITerminalNode[] FINL() { return GetTokens(SICXEParser.FINL); }
		public ITerminalNode FINL(int i) {
			return GetToken(SICXEParser.FINL, i);
		}
		public ITerminalNode Eof() { return GetToken(SICXEParser.Eof, 0); }
		public InicioContext[] inicio() {
			return GetRuleContexts<InicioContext>();
		}
		public InicioContext inicio(int i) {
			return GetRuleContext<InicioContext>(i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_programa; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISICXEListener typedListener = listener as ISICXEListener;
			if (typedListener != null) typedListener.EnterPrograma(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISICXEListener typedListener = listener as ISICXEListener;
			if (typedListener != null) typedListener.ExitPrograma(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISICXEVisitor<TResult> typedVisitor = visitor as ISICXEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPrograma(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramaContext programa() {
		ProgramaContext _localctx = new ProgramaContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_programa);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 50;
			_errHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 43; inicio();
					State = 47;
					_errHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(_input,0,_ctx);
					while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
						if ( _alt==1 ) {
							{
							{
							State = 44; Match(FINL);
							}
							} 
						}
						State = 49;
						_errHandler.Sync(this);
						_alt = Interpreter.AdaptivePredict(_input,0,_ctx);
					}
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 52;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,1,_ctx);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber );
			State = 57;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case END:
				{
				State = 54; fin2();
				}
				break;
			case FINL:
				{
				State = 55; Match(FINL);
				}
				break;
			case Eof:
				{
				State = 56; Match(Eof);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InicioContext : ParserRuleContext {
		public EtiquetaContext etiqueta() {
			return GetRuleContext<EtiquetaContext>(0);
		}
		public ITerminalNode NUM() { return GetToken(SICXEParser.NUM, 0); }
		public ITerminalNode[] FINL() { return GetTokens(SICXEParser.FINL); }
		public ITerminalNode FINL(int i) {
			return GetToken(SICXEParser.FINL, i);
		}
		public ITerminalNode[] WS() { return GetTokens(SICXEParser.WS); }
		public ITerminalNode WS(int i) {
			return GetToken(SICXEParser.WS, i);
		}
		public ProposicionContext proposicion() {
			return GetRuleContext<ProposicionContext>(0);
		}
		public InicioContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_inicio; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISICXEListener typedListener = listener as ISICXEListener;
			if (typedListener != null) typedListener.EnterInicio(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISICXEListener typedListener = listener as ISICXEListener;
			if (typedListener != null) typedListener.ExitInicio(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISICXEVisitor<TResult> typedVisitor = visitor as ISICXEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInicio(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InicioContext inicio() {
		InicioContext _localctx = new InicioContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_inicio);
		int _la;
		try {
			int _alt;
			State = 71;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,5,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 59; etiqueta();
				State = 60; Match(T__0);
				State = 62;
				_errHandler.Sync(this);
				_la = _input.La(1);
				if (_la==NUM) {
					{
					State = 61; Match(NUM);
					}
				}

				State = 67;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,4,_ctx);
				while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
					if ( _alt==1 ) {
						{
						{
						State = 64;
						_la = _input.La(1);
						if ( !(_la==FINL || _la==WS) ) {
						_errHandler.RecoverInline(this);
						} else {
							if (_input.La(1) == TokenConstants.Eof) {
								matchedEOF = true;
							}

							_errHandler.ReportMatch(this);
							Consume();
						}
						}
						} 
					}
					State = 69;
					_errHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(_input,4,_ctx);
				}
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 70; proposicion();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Fin2Context : ParserRuleContext {
		public ITerminalNode END() { return GetToken(SICXEParser.END, 0); }
		public ITerminalNode ID() { return GetToken(SICXEParser.ID, 0); }
		public ITerminalNode CONSTCAD() { return GetToken(SICXEParser.CONSTCAD, 0); }
		public Etiqueta_con_espaciosContext etiqueta_con_espacios() {
			return GetRuleContext<Etiqueta_con_espaciosContext>(0);
		}
		public Fin2Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fin2; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISICXEListener typedListener = listener as ISICXEListener;
			if (typedListener != null) typedListener.EnterFin2(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISICXEListener typedListener = listener as ISICXEListener;
			if (typedListener != null) typedListener.ExitFin2(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISICXEVisitor<TResult> typedVisitor = visitor as ISICXEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFin2(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Fin2Context fin2() {
		Fin2Context _localctx = new Fin2Context(_ctx, State);
		EnterRule(_localctx, 6, RULE_fin2);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 73; Match(END);
			State = 77;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				State = 74; Match(ID);
				}
				break;

			case 2:
				{
				State = 75; Match(CONSTCAD);
				}
				break;

			case 3:
				{
				State = 76; etiqueta_con_espacios();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EntradaContext : ParserRuleContext {
		public ITerminalNode ID() { return GetToken(SICXEParser.ID, 0); }
		public EContext e() {
			return GetRuleContext<EContext>(0);
		}
		public EntradaContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_entrada; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISICXEListener typedListener = listener as ISICXEListener;
			if (typedListener != null) typedListener.EnterEntrada(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISICXEListener typedListener = listener as ISICXEListener;
			if (typedListener != null) typedListener.ExitEntrada(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISICXEVisitor<TResult> typedVisitor = visitor as ISICXEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEntrada(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EntradaContext entrada() {
		EntradaContext _localctx = new EntradaContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_entrada);
		try {
			State = 81;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case ID:
				EnterOuterAlt(_localctx, 1);
				{
				State = 79; Match(ID);
				}
				break;
			case Eof:
			case T__0:
			case T__2:
			case T__6:
			case T__7:
			case T__8:
			case T__9:
			case T__10:
			case T__11:
			case CODOPF1:
			case INSTRN:
			case INSTRUNIC:
			case CODOPF2:
			case CODOPF34:
			case WS:
				EnterOuterAlt(_localctx, 2);
				{
				State = 80; e();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ProposicionesContext : ParserRuleContext {
		public ProposicionContext[] proposicion() {
			return GetRuleContexts<ProposicionContext>();
		}
		public ProposicionContext proposicion(int i) {
			return GetRuleContext<ProposicionContext>(i);
		}
		public ITerminalNode[] FINL() { return GetTokens(SICXEParser.FINL); }
		public ITerminalNode FINL(int i) {
			return GetToken(SICXEParser.FINL, i);
		}
		public ProposicionesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_proposiciones; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISICXEListener typedListener = listener as ISICXEListener;
			if (typedListener != null) typedListener.EnterProposiciones(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISICXEListener typedListener = listener as ISICXEListener;
			if (typedListener != null) typedListener.ExitProposiciones(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISICXEVisitor<TResult> typedVisitor = visitor as ISICXEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProposiciones(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProposicionesContext proposiciones() {
		ProposicionesContext _localctx = new ProposicionesContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_proposiciones);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 90;
			_errHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 83; proposicion();
					State = 87;
					_errHandler.Sync(this);
					_la = _input.La(1);
					while (_la==FINL) {
						{
						{
						State = 84; Match(FINL);
						}
						}
						State = 89;
						_errHandler.Sync(this);
						_la = _input.La(1);
					}
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 92;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,9,_ctx);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber );
			State = 94; proposicion();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ProposicionContext : ParserRuleContext {
		public InstruccionContext instruccion() {
			return GetRuleContext<InstruccionContext>(0);
		}
		public DirectivaContext directiva() {
			return GetRuleContext<DirectivaContext>(0);
		}
		public ProposicionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_proposicion; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISICXEListener typedListener = listener as ISICXEListener;
			if (typedListener != null) typedListener.EnterProposicion(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISICXEListener typedListener = listener as ISICXEListener;
			if (typedListener != null) typedListener.ExitProposicion(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISICXEVisitor<TResult> typedVisitor = visitor as ISICXEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProposicion(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProposicionContext proposicion() {
		ProposicionContext _localctx = new ProposicionContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_proposicion);
		try {
			State = 98;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,10,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 96; instruccion();
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 97; directiva();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InstruccionContext : ParserRuleContext {
		public EtiquetaContext etiqueta() {
			return GetRuleContext<EtiquetaContext>(0);
		}
		public Formato2Context formato2() {
			return GetRuleContext<Formato2Context>(0);
		}
		public Formato1Context formato1() {
			return GetRuleContext<Formato1Context>(0);
		}
		public Formato3Context formato3() {
			return GetRuleContext<Formato3Context>(0);
		}
		public InstruccionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_instruccion; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISICXEListener typedListener = listener as ISICXEListener;
			if (typedListener != null) typedListener.EnterInstruccion(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISICXEListener typedListener = listener as ISICXEListener;
			if (typedListener != null) typedListener.ExitInstruccion(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISICXEVisitor<TResult> typedVisitor = visitor as ISICXEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInstruccion(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InstruccionContext instruccion() {
		InstruccionContext _localctx = new InstruccionContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_instruccion);
		try {
			State = 109;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,11,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 100; etiqueta();
				State = 101; formato2();
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 103; etiqueta();
				State = 104; formato1();
				}
				break;

			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 106; etiqueta();
				State = 107; formato3();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Formato1Context : ParserRuleContext {
		public ITerminalNode CODOPF1() { return GetToken(SICXEParser.CODOPF1, 0); }
		public Formato1Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_formato1; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISICXEListener typedListener = listener as ISICXEListener;
			if (typedListener != null) typedListener.EnterFormato1(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISICXEListener typedListener = listener as ISICXEListener;
			if (typedListener != null) typedListener.ExitFormato1(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISICXEVisitor<TResult> typedVisitor = visitor as ISICXEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFormato1(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Formato1Context formato1() {
		Formato1Context _localctx = new Formato1Context(_ctx, State);
		EnterRule(_localctx, 16, RULE_formato1);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 111; Match(CODOPF1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Formato2Context : ParserRuleContext {
		public ITerminalNode CODOPF2() { return GetToken(SICXEParser.CODOPF2, 0); }
		public RegistroContext[] registro() {
			return GetRuleContexts<RegistroContext>();
		}
		public RegistroContext registro(int i) {
			return GetRuleContext<RegistroContext>(i);
		}
		public ITerminalNode INSTRN() { return GetToken(SICXEParser.INSTRN, 0); }
		public ITerminalNode NUM() { return GetToken(SICXEParser.NUM, 0); }
		public ITerminalNode INSTRUNIC() { return GetToken(SICXEParser.INSTRUNIC, 0); }
		public Formato2Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_formato2; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISICXEListener typedListener = listener as ISICXEListener;
			if (typedListener != null) typedListener.EnterFormato2(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISICXEListener typedListener = listener as ISICXEListener;
			if (typedListener != null) typedListener.ExitFormato2(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISICXEVisitor<TResult> typedVisitor = visitor as ISICXEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFormato2(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Formato2Context formato2() {
		Formato2Context _localctx = new Formato2Context(_ctx, State);
		EnterRule(_localctx, 18, RULE_formato2);
		int _la;
		try {
			State = 131;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case CODOPF2:
				EnterOuterAlt(_localctx, 1);
				{
				State = 113; Match(CODOPF2);
				{
				State = 114; registro();
				State = 117;
				_errHandler.Sync(this);
				_la = _input.La(1);
				if (_la==T__1) {
					{
					State = 115; Match(T__1);
					State = 116; registro();
					}
				}

				}
				}
				break;
			case INSTRN:
				EnterOuterAlt(_localctx, 2);
				{
				State = 119; Match(INSTRN);
				State = 125;
				_errHandler.Sync(this);
				_la = _input.La(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__5) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << REG))) != 0)) {
					{
					State = 120; registro();
					State = 123;
					_errHandler.Sync(this);
					_la = _input.La(1);
					if (_la==T__1) {
						{
						State = 121; Match(T__1);
						State = 122; Match(NUM);
						}
					}

					}
				}

				}
				break;
			case INSTRUNIC:
				EnterOuterAlt(_localctx, 3);
				{
				State = 127; Match(INSTRUNIC);
				State = 129;
				_errHandler.Sync(this);
				_la = _input.La(1);
				if (_la==NUM) {
					{
					State = 128; Match(NUM);
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Formato3Context : ParserRuleContext {
		public ITerminalNode CODOPF34() { return GetToken(SICXEParser.CODOPF34, 0); }
		public ITerminalNode ID() { return GetToken(SICXEParser.ID, 0); }
		public ITerminalNode NUM() { return GetToken(SICXEParser.NUM, 0); }
		public Formato3Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_formato3; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISICXEListener typedListener = listener as ISICXEListener;
			if (typedListener != null) typedListener.EnterFormato3(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISICXEListener typedListener = listener as ISICXEListener;
			if (typedListener != null) typedListener.ExitFormato3(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISICXEVisitor<TResult> typedVisitor = visitor as ISICXEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFormato3(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Formato3Context formato3() {
		Formato3Context _localctx = new Formato3Context(_ctx, State);
		EnterRule(_localctx, 20, RULE_formato3);
		int _la;
		try {
			State = 156;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case T__2:
			case CODOPF34:
				EnterOuterAlt(_localctx, 1);
				{
				{
				State = 134;
				_errHandler.Sync(this);
				_la = _input.La(1);
				if (_la==T__2) {
					{
					State = 133; Match(T__2);
					}
				}

				State = 136; Match(CODOPF34);
				}
				State = 153;
				_errHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(_input,18,_ctx) ) {
				case 1:
					{
					State = 138; Match(ID);
					}
					break;

				case 2:
					{
					State = 139; Match(T__3);
					State = 140; Match(NUM);
					}
					break;
